# projects-taller2

./: .gitignore  Dockerfile  README.md  app.py  heroku.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docker-compose/: api-entrypoint.sh  docker-compose.yml
model/: model.py
projects/: api.py  app.py  cfg.py  constants.py  exceptions.py  manage.py  model.py  test.db  utils.py
projects/client/: client.py
projects/migrations/: env.py
projects/migrations/versions/: 008fe3de1c25_changing_column_name_to_status.py  0e23f982e5bf_adding_new_columns_and_changing_tyoe.py  19a94fb7ddd3_adding_columns_and_removing_type_table.py  24b8bab70098_changing_column_name_for_type.py  26629b5c6513_adding_videos_columns.py  30c32a5e035b_2020_07_22_adding_lat_and_lon_columns.py  3d766fdd32b8_adding_number_to_stage_table.py  440d4dc6c337_initial_migration.py  5488954fb77e_updating_project_location.py  60751180e888_adding_sponsor_table.py  616082190e9c_adding_stages_to_project.py  923b45c6d38c_adding_assigned_status.py  93180f36a377_adding_overseer_table.py  b9888e52e087_changing_type_of_column.py  d9833766ae2c_2020_06_06_changing_default_value_in_.py  da3a7a41675c_.py  f980490113de_changing_project_status.py  faefc4c2e606_20201_07_27_changes_in_fav_table.py  ffd6b7a515ce_adding_column.py
projects/models/: model.py
projects/namespaces/: __init__.py
projects/namespaces/default/: ___init__.py  namespace.py
projects/namespaces/overseer_ns/: model.py  models.py  overseer.py
projects/namespaces/project_ns/: ___init__.py  (+3 more)
test/: test_projects.py
(+7 files in other folders)
