[tool.poetry]
name = "projects"
version = "0.1.0"
description = "Microservice used to manage prijects"
authors = ["JCaceres2 <julieta.a.caceres@tsgforce.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
flask-restx = "^0.3.0"
Flask-Cors = "^3.0.10"
youconfigme = "^0.6.14"
gunicorn = "^20.1.0"
SQLAlchemy-Utils = "^0.37.2"
Flask-Script = "^2.0.6"
psycopg2-binary = "^2.8.6"
Flask-Migrate = "^2.7.0"
SQLAlchemy = "<1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
